W21D5 agenda (day) (half day behind)

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 31th</h1>
-            <h3>Week 21 Day 4 (Intro to CSS - Day 3)</h3>
+            <h1>GDWD 105 - Agenda for November 1st</h1>
+            <h3>Week 21 Day 5 (Intro to CSS - Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Cats? or Dogs? (or both? or neither?)</li>
+                        <li>Would you prefer a staycation? or a destination vacation?</li>
                     </ul>
-                    <div class="img-container black">
+                    <div class="img-container">
                         <img 
-                            src="images/halloween_cats.webp"
-                            alt="painter fox"
+                            src="images/island-vacation.jpg"
+                            alt="cat on an island turtle"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
                         <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                        <li><span class="type">Exercise</span>Upside Down Tetris</li>
+                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
                     </ul>
                 </div>
 
@@ -35,23 +36,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Divs, Spans, and Flow [cont.]</li>
-                            <li><span class="type">PowerPoint</span>The Box Model</li>
+                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Box Model</li>
-                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                            <li><span class="type">Exercise</span>Upside Down Tetris</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
                         </ul>
                     </div>
                 </div>
