--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -34,6 +34,7 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
+                            <li><span class="type">Kahoot</span>HTML Children Review</li>
                             <li><span class="type">Demo</span>Combining Selectors</li>
                         </ul>
                     </div>
