--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for November 2nd</h1>
-            <h3>Week 22 Day 1 (Intro to CSS - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for November 3rd</h1>
+            <h3>Week 22 Day 2 (Intro to CSS - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite ice cream flavor? Any toppings?</li>
+                        <li>What is (or was) your favorite breakfast cereal?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/kamehamehos.jpeg"
+                            alt="kamehamehos"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                        <li><span class="type">Project</span>Box Framing</li>
                     </ul>
                 </div>
 
@@ -34,23 +34,24 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Children Review</li>
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">Demo</span>Absolute vs Relative Units</li>
+                            <li><span class="type">Project</span>Box Framing</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
-                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
+                            <li><span class="type">Project</span>Box Framing [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                            <li><span class="type">Project</span>Box Framing [cont.]</li>
+                            <li><span class="type">Extra Credit</span>Bulletin Board</li>
+                            <li><span class="type">Extra Credit</span>Generic License</li>
                         </ul>
                     </div>
                 </div>
