--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for November 6th</h1>
-            <h3>Week 22 Day 3 (Page Layouts - Day 1)</h3>
+            <h1>GDWD 105 - Agenda for November 7th</h1>
+            <h3>Week 22 Day 4 (Page Layouts - Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is a hobby you do in your free time?</li>
+                        <li>Do you see the glass as half empty or half full?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space ash-gray">
                         <img 
-                            src="images/cosplay.jpeg"
-                            alt="cosplay"
+                            src="images/good-day.webp"
+                            alt="good day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>CSS Fundamentals</li>
-                        <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
                         <li><span class="type">Exercise</span>Product Showcase Site</li>
+                        <li><span class="type">Exercise</span>Wiki with Sidebar (?)</li>
                     </ul>
                 </div>
 
@@ -36,24 +35,23 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>CSS Fundamentals</li>
-                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column Layouts</li>
+                            <li><span class="type">Exercise</span>Product Showcase Site</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Two Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Single Column Layouts</li>
-                            <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
+                            <li><span class="type">PowerPoint</span>Flexbox</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Flex)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Single Column Layouts Drills [cont.]</li>
-                            <li><span class="type">Exercise</span>Product Showcase Site</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                         </ul>
                     </div>
                 </div>
