--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for November 7th</h1>
-            <h3>Week 22 Day 4 (Page Layouts - Day 2)</h3>
+            <h1>GDWD 105 - Agenda for November 8th</h1>
+            <h3>Week 22 Day 5 (Page Layouts - Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Do you see the glass as half empty or half full?</li>
+                        <li>What was one of your favorite Saturday morning cartoons growing up?</li>
                     </ul>
-                    <div class="img-container more-space ash-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/good-day.webp"
-                            alt="good day"
+                            src="images/atla_cartoon.jpg"
+                            alt="avatar last airbender animals"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Product Showcase Site</li>
-                        <li><span class="type">Exercise</span>Wiki with Sidebar (?)</li>
+                        <li><span class="type">Exercise</span>Wiki with Sidebar</li>
+                        <li><span class="type">Exercise</span>Blog with Sidebar</li>
                     </ul>
                 </div>
 
@@ -35,23 +35,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Product Showcase Site</li>
-                            <li><span class="type">PowerPoint</span>Page Layouts - Two Column Layouts</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar [cont.]</li>
+                            <li><span class="type">PowerPoint</span>CSS Grid</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Flexbox</li>
-                            <li><span class="type">Demo</span>Two Column Layouts (Flex)</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Grid)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
+                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
                         </ul>
                     </div>
                 </div>
