--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -24,8 +24,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                        <li><span class="type">Exercise</span>Trek Cards</li>
+                        <li><span class="type">Exercise</span>Animagram Cards</li>
                     </ul>
                 </div>
 
