--- a/cookbook/meal-prep/heroes/page8.html
+++ b/cookbook/meal-prep/heroes/page8.html
@@ -11,7 +11,8 @@
             <h1>Sup?</h1>
         </div>
 
-        <div class="spacer"></div>
+        <!-- Add this... -->
+        <div class="parallax-banner"></div>
 
         <div id="hero-2">
             <h2>Feeling lost?</h2>
@@ -19,7 +20,8 @@
             <a href="#">REQUEST ASSISTANCE</a>
         </div>
 
-        <div class="spacer"></div>
+        <!-- ...and this... -->
+        <div class="parallax-banner"></div>
 
         <div id="hero-3">
             <div class="hero-content">
@@ -31,7 +33,10 @@
                 </div>
             </div>
         </div>
-        <div class="spacer"></div>
+
+        <!-- ...and finally, this too. -->
+        <div class="parallax-banner"></div>
+
         <div id="hero-4">
             <div class="hero-content">
                 <h2>Make a Wish</h2>
