--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for November 20th</h1>
-            <h3>Week 24 Day 3 (Content Layouts - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for November 21st</h1>
+            <h3>Week 24 Day 4 (Content Layouts - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>
-                            Do you have a favorite obscure movie/series/game 
-                            that no one else seems to know about?
-                        </li>
+                        Would you rather be able to:
+                        <ul>
+                            <li>eat anything you want in one meal a day for perfect nutrition?</li>
+                            <li>sleep for 1 hour and be perfectly rested?
+                        </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/shooting-star.jpg"
-                            alt="shooting star"
+                            src="images/power-nap.jpeg"
+                            alt="power nap"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Personal Portfolio Site</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -36,22 +37,21 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Google Fonts</li>
-                            <li><span class="type">Project</span>Personal Portfolio Site</li>
+                            <li><span class="type">Lab Time</span>Previous Project/Assignments</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
+                            <li><span class="type">Lab Time</span>Extra Credit - Product Comparison Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
