--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for November 27th</h1>
-            <h3>Week 25 Day 3 (Navigation Layouts - Day 4)</h3>
+            <h1>GDWD 105 - Agenda for December 2nd</h1>
+            <h3>Week 25 Day 4 (Navigation Layouts - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have the power of flight
-                            or the power to levitate objects?
+                            Would you rather have: a bag that could hold anything, or
+                            your own pocket-dimension accessed via suitcase?
                         </li>
                     </ul>
                     <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/broom-cats.jpg"
-                            alt="broom cats"
+                            src="images/hoarder-fox.webp"
+                            alt="hoarder fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
-                        <li><span class="type">Exercise</span>Hover Galleries</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -37,7 +36,8 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin [cont.]</li>
+                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
+                            <li><span class="type">Demo</span>Dropdown Menus</li>
                             
                         </ul>
                     </div>
@@ -45,15 +45,15 @@
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
+                            <li><span class="type">Demo</span>Dropdown Menus [cont.]</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Hover Galleries</li>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
