--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -9,27 +9,26 @@
         
         <div id="layout">
             <h1>GDWD 105 - Agenda for December 10th</h1>
-            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
+            <h3>Week 27 Day 1 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you could go back in time, what is something
-                            you'd tell yourself back on Day 1 of this course?
+                            What is a character trait that you admire in other people?
                         </li>
                     </ul>
-                    <div class="img-container dark-blue-green">
+                    <div class="img-container">
                         <img 
-                            src="images/time-traveler.webp"
-                            alt="time traveling owl"
+                            src="images/impressive.webp"
+                            alt="vader impressive"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EXAM</span></li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
+                        <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                        <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
+                        <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
                     </ul>
                 </div>
 
@@ -38,22 +37,24 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-11:15am)</h3>
                         <ul>
-                            <li><span class="type">FINAL EXAM</span></li>
+                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
+                            <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (11:25am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
-                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Any Remaining Coding Assignments / Extra Credit</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
                         </ul>
                     </div>
                 </div>
