W27D2 agenda (day) (hurricane overflow)

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,53 +8,54 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for December 10th</h1>
-            <h3>Week 27 Day 1 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for December 12th</h1>
+            <h3>Week 27 Day 2 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is a character trait that you admire in other people?
+                            What is a character trait or behavior 
+                            that you really dislike in other people?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space black">
                         <img 
-                            src="images/impressive.webp"
-                            alt="vader impressive"
+                            src="images/emperor.webp"
+                            alt="emperor hate"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
-                        <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
                         <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                        <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
+                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
-                        <h3>Period 1 (9:10am-11:15am)</h3>
+                        <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
-                            <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (11:25am-12pm)</h3>
+                        <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Personal Branding</li>
-                            <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
+                            <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
-                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
                         </ul>
                     </div>
                 </div>
