--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,29 +8,29 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for December 12th</h1>
-            <h3>Week 27 Day 2 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for December 13th</h1>
+            <h3>Week 27 Day 3 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is a character trait or behavior 
-                            that you really dislike in other people?
+                            Which of your remaining classes are you most excited 
+                            for: Motion Graphics (106), Layout Design (107), or
+                            the Portfolio course (108)?
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container more-space final-black">
                         <img 
-                            src="images/emperor.webp"
-                            alt="emperor hate"
+                            src="images/finalday.jpg"
+                            alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
-                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
-                        <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
                         <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                        <li><span class="type">Project</span>Creative Resume</li>
                     </ul>
                 </div>
 
@@ -39,23 +39,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
-                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                            <li><span class="type">PowerPoint</span>Career Development Tips Refresher</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
-                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                            <li><span class="type">Project</span>Creative Resume</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
+                            <li><span class="type">Project</span>Creative Resume [cont.]</li>
                         </ul>
                     </div>
                 </div>
