--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -29,7 +29,6 @@
                     <h2>Deliverables for Today</h2>
                     <ul>
                         <li><span class="type">Project</span>Personal Brand Style Guide</li>
-                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
                         <li><span class="type">Project</span>Creative Resume</li>
                     </ul>
                 </div>
@@ -47,7 +46,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                            <li><span class="type">SURVEY</span>End of Course Surveys w/ Lia</li>
                             <li><span class="type">Project</span>Creative Resume</li>
                         </ul>
                     </div>
