css checker updates (pull code and apply rules)

--- a/cookbook/css-checker.html
+++ b/cookbook/css-checker.html
@@ -83,8 +83,7 @@
                     <textarea 
                         id="html-input" 
                         placeholder="Paste your HTML here..."
-                    >
-                    </textarea>
+                    ></textarea>
                 </div>
                 <div id="orContainer">OR</div>
                 <div id="urlInputContainer">
@@ -112,17 +111,6 @@
                         <h3>Lines of overall dirty code: <span id="dirtyCodeCount"></span></h3>
                     </div>
                     <h2><span id="dirtyPercent"></span>% DIRTY</h2>
-                </div>
-                <div id="issuesListContainer">
-                    <h4>Issues List</h4>
-                    <p>
-                        Below are the clean code issues this tool was able to detect in 
-                        your code.  However, note that this tool is best at detecting 
-                        syntax issues (i.e. issues with the grammar of a programming 
-                        language) and suggesting how to fix them. Logic errors, on the 
-                        other hand, are harder for it to target specifically.
-                    </p>
-                    <div id="issuesList"></div>
                 </div>
 
                 <h4 id="cleanupHelperHeading">Interactive Cleanup Helper</h4>
@@ -192,6 +180,18 @@
                         <h5>Cleaned Code (Indentation Cleanup Only)</h5>
                         <div id="cleanedInput" class="code"></div>
                     </div>
+                </div>
+
+                <div id="issuesListContainer">
+                    <h4>Issues List</h4>
+                    <p>
+                        Below are the clean code issues this tool was able to detect in 
+                        your code.  However, note that this tool is best at detecting 
+                        syntax issues (i.e. issues with the grammar of a programming 
+                        language) and suggesting how to fix them. Logic errors, on the 
+                        other hand, are harder for it to target specifically.
+                    </p>
+                    <div id="issuesList"></div>
                 </div>
             </div>
         </div>
