last (?) round of self-tests for css checker

--- a/cookbook/css-checker.html
+++ b/cookbook/css-checker.html
@@ -122,14 +122,16 @@
                         but processed to 
                         fix your indentation issues. However, certain dirty code 
                         issues (particularly logic errors) may prevent this tool 
-                        from correctly fixing your indentation, such as stray tags.
+                        from correctly fixing your indentation, such as 
+                        missing curly brackets.
                     </p>
                     <p>
                         Hover over a line or line number with an error, and the
                         particular issues associated with that line will show up
-                        in a tool tip. Hovering over the tag of an element split up
-                        across multiple lines will cause both its opening and 
-                        closing tag to be highlighted.
+                        in a tool tip. Hovering over a line with the opening or 
+                        closing curly bracket of an CSS Rule or Media Query
+                        will cause the lines of both its opening and closing 
+                        curly brackets to be highlighted.
                     </p>
                     <p>
                         We recommend addressing the issues from top to bottom.
