--- a/cookbook/css-checker.html
+++ b/cookbook/css-checker.html
@@ -134,7 +134,8 @@
                         curly brackets to be highlighted.
                     </p>
                     <p>
-                        We recommend addressing the issues from top to bottom.
+                        We recommend addressing the issues one at a time 
+                        from top to bottom.
                         Sometimes, addressing an issue earlier on in your code
                         can fix issues lower down.
                     </p>
