--- a/cookbook/css-checker.html
+++ b/cookbook/css-checker.html
@@ -81,8 +81,8 @@
                 <div id="textInputContainer"> 
                     <h3>Raw CSS Input</h3>
                     <textarea 
-                        id="html-input" 
-                        placeholder="Paste your HTML here..."
+                        id="css-input" 
+                        placeholder="Paste your CSS here..."
                     ></textarea>
                 </div>
                 <div id="orContainer">OR</div>
