--- a/cookbook/appetizers/creating-a-post.html
+++ b/cookbook/appetizers/creating-a-post.html
@@ -198,6 +198,13 @@
                                     </li>
                                 </ul>
                             </p>
+                            <p>
+                                For more details, check out the 
+                                <a href="adding-a-block.html">
+                                    Adding a Block in the Block Editor
+                                </a>
+                                tutorial!
+                            </p>
                         </div>
                         <div class="imageContainer">
                             <img 
