--- a/cookbook/seasonings/background-size.html
+++ b/cookbook/seasonings/background-size.html
@@ -87,17 +87,17 @@
             </div>
             <p>
                 In this case, you can see that the image is still cropped, but 
-                it is the edges of the images that are cropped, not the bottom 
-                of the image.
+                it is the edges of the images that are cropped, not just the 
+                bottom of the image.
             </p>
             <h5>The 'contain' keyword</h5>
             <p>
                 The 'contain' value is essentially the opposite of 'cover'. 
                 Rather than making sure that the container is "covered" by the
-                image, 'contain' says to make sure that the image is displayed 
-                in its entirety with no cropping at least once, even if that 
-                means parts of container are left empty or the image starts 
-                repeating.
+                image, the 'contain' keyword says to make sure that the image 
+                is displayed in its entirety with no cropping at least once
+                within the container, even if that means parts of container are 
+                left empty or the image starts repeating.
             </p>
             
             <h6>
@@ -151,7 +151,7 @@
             <h5>Using width values</h5>
             <p>
                 Though less common, you can also provide background-size 
-                with regular old width value, using either pixels or
+                with regular old width values, using either pixels or
                 percentages.
             </p>
             <p>
