background position and background size

--- a/cookbook/seasonings/background-size.html
+++ b/cookbook/seasonings/background-size.html
@@ -19,7 +19,7 @@
         <h4>Additional Examples</h4>
         <div>
             <p>
-                The background-size property  sets the size of the element's 
+                The background-size property sets the size of the container's 
                 background image. The image can be left to its natural size, 
                 stretched, or constrained to fit the available space.
             </p>
