wp caching troubleshooting update

--- a/cookbook/troubleshooting/wordpress-caching.html
+++ b/cookbook/troubleshooting/wordpress-caching.html
@@ -40,12 +40,12 @@
                             <p class="indent">
                                 After logging in, navigate to the Sites tab in the 
                                 navigation sidebar, and open up the Site Dashboard 
-                                for the site that isn't viewable by others.
+                                for the site that is behaving badly.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/wpcache_01_sitelogin.png" 
+                                src="images/wpcache_01_sitelogin_v2.png" 
                                 alt="Log in, navigate to the Sites tab, and click on the site you want to fix"
                             >
                             <figcaption>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/wpcache_02_clearcachebutton.png" 
+                                src="images/wpcache_02_clearcachebutton_v2.png" 
                                 alt="Location of the 'Clear Caches' button"
                             >
                             <figcaption>
