pantheon/wordpress creation updates

--- a/cookbook/appetizers/pantheon-wordpress-setup.html
+++ b/cookbook/appetizers/pantheon-wordpress-setup.html
@@ -201,18 +201,86 @@
                     </div>
                 </li>
                 <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                After logging in, you'll be asked to fill out a
+                                bit more information to finish creating your 
+                                account.
+                            </p>
+                            <p class="indent">
+                                NOTE: Pantheon changes their account creation flow 
+                                a couple times a year, so what you see as you 
+                                sign up may look a little different than the 
+                                screenshot.  That's okay, just fill out the 
+                                required fields that it needs from you.
+                            </p>
+                            <p>
+                                Fill out the required fields, and click the 
+                                [Continue] button.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/pantheon-wordpress-setup/03_5_pantheon_registration.png" 
+                                alt="Completing your Pantheon Account registration"
+                            >
+                            <figcaption>
+                                Completing your Pantheon Account registration
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                After creating your account, you may be asked to 
+                                fill out more information related to 
+                                customization options in a new popup that 
+                                appears.
+                            </p>
+                            <p>
+                                These are optional, and we recommend just
+                                clicking the X in the upper right corner to
+                                close the popup.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/pantheon-wordpress-setup/03_6_customization.png" 
+                                alt="The customization options popup"
+                            >
+                            <figcaption>
+                                The customization options popup
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
                     <h2 id="p1_step4" class="invisibleInnerAnchorTarget"></h2>
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
                                 After logging in, you'll be brought to your 
-                                Pantheon Home page, which should resemble the 
-                                screenshot to the right.
+                                Pantheon Home page, which should somewhat 
+                                resemble the screenshot to the right.
+                            </p>
+                            <p class="indent">
+                                NOTE: However, as we've said before, Pantheon 
+                                changes up their account creation flow
+                                periodically, so you may end up on a slightly 
+                                different view after creating your account.
+                            </p>
+                            <p class="indent">
+                                If that is the case, just click on the "Home"
+                                tab in the left sidenav, and that should bring 
+                                you to where you need to be.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton_v2.png" 
+                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton_alt_v3.png" 
                                 alt="Your Pantheon Home page"
                             >
                             <figcaption>
