mebay and icon library

--- a/cookbook/ingredients/icon-library.html
+++ b/cookbook/ingredients/icon-library.html
@@ -12,7 +12,13 @@
             trouble with icons loading, make sure that the 
             icon itself (and its style) are not "pro".
         -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link 
+            rel="stylesheet" 
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+            crossorigin="anonymous" 
+            referrerpolicy="no-referrer"
+        >
     </head>
     <body>
         <h1>Icon Library Example (Font Awesome)</h1>
@@ -34,7 +40,12 @@
             To use the Font Awesome Library on your page,
             simply copy the code below in its entirety 
             and paste it in your &lt;head&gt; element, 
-            right below your &lt;title&gt; element.
+            right below your &lt;title&gt; element
+            (and for clean code, split up the attributes
+            across multiple lines; you can't help the 
+            length of the attributes going over 80
+            characters, but you can at least make them
+            easier to read).
         </p>
         <code>
             &lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" /&gt;
