adding in CSS code checker

--- a/cookbook/css-checker.html
+++ b/cookbook/css-checker.html
@@ -16,7 +16,7 @@
                 <div id="navLinks">
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="ingredients.html" class="selected">
+                            <a href="ingredients.html">
                                 HTML
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
@@ -24,12 +24,12 @@
                         <div class="dropdown-items">
                             <h2><a href="ingredients.html">Elements</a></h2>
                             <h2><a href="ingredients-cheatsheet.html">Cheatsheet</a></h2>
-                            <h2><a href="html-checker.html" class="selected">Dirty Code Report</a></h2>
+                            <h2><a href="html-checker.html">Dirty Code Report</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="seasonings.html">
+                            <a href="seasonings.html" class="selected">
                                 CSS
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
@@ -37,6 +37,7 @@
                         <div class="dropdown-items">
                             <h2><a href="seasonings.html">Properties</a></h2>
                             <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
+                            <h2><a href="css-checker.html" class="selected">Dirty Code Report</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
@@ -62,8 +63,8 @@
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="demos.html">Class Demos</a></h2>
                             <h2><a href="appetizers.html">Tutorials</a></h2>
+                            <h2><a href="demos.html">Coding Demos</a></h2>
                             <h2><a href="troubleshooting.html">Troubleshooting</a></h2>
                         </div>
                     </div>
