--- a/cookbook/demos.html
+++ b/cookbook/demos.html
@@ -38,6 +38,7 @@
                         <div class="dropdown-items">
                             <h2><a href="seasonings.html">Properties</a></h2>
                             <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
+                            <h2><a href="css-checker.html">Dirty Code Report</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
@@ -63,8 +64,8 @@
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="demos.html" class="selected">Class Demos</a></h2>
                             <h2><a href="appetizers.html">Tutorials</a></h2>
+                            <h2><a href="demos.html" class="selected">Coding Demos</a></h2>
                             <h2><a href="troubleshooting.html">Troubleshooting</a></h2>
                         </div>
                     </div>
@@ -109,7 +110,7 @@
         </nav>
         
         <header id="title" class="fadeOut hide">
-            <h1>Class Demos</h1>
+            <h1>Coding Demos</h1>
             <h3>Resources to Help You Cook at Your Own Pace</h3>
         </header>
         
