--- a/cookbook/more.html
+++ b/cookbook/more.html
@@ -40,6 +40,7 @@
                         <div class="dropdown-items">
                             <h2><a href="seasonings.html">Properties</a></h2>
                             <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
+                            <h2><a href="css-checker.html">Dirty Code Report</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
@@ -59,14 +60,14 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="more.html">
+                            <a href="more.html" class="selected">
                                 More
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="demos.html">Class Demos</a></h2>
                             <h2><a href="appetizers.html">Tutorials</a></h2>
+                            <h2><a href="demos.html">Coding Demos</a></h2>
                             <h2><a href="troubleshooting.html">Troubleshooting</a></h2>
                         </div>
                     </div>
