--- a/cookbook/troubleshooting.html
+++ b/cookbook/troubleshooting.html
@@ -38,6 +38,7 @@
                         <div class="dropdown-items">
                             <h2><a href="seasonings.html">Properties</a></h2>
                             <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
+                            <h2><a href="css-checker.html">Dirty Code Report</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
@@ -63,8 +64,8 @@
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="demos.html">Class Demos</a></h2>
                             <h2><a href="appetizers.html">Tutorials</a></h2>
+                            <h2><a href="demos.html">Coding Demos</a></h2>
                             <h2><a href="troubleshooting.html" class="selected">Troubleshooting</a></h2>
                         </div>
                     </div>
