moving html checker out of beta

--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -73,7 +73,7 @@
         </nav>
         
         <header id="title">
-            <h1>HTML Dirty Code Report (Beta)
+            <h1>HTML Dirty Code Report
 
             </h1>
             <h3>Submit your code below to get your "Dirty Code Report Card"!</h3>
