--- a/cookbook/meal-prep/media-queries-v4/page4.html
+++ b/cookbook/meal-prep/media-queries-v4/page4.html
@@ -14,10 +14,14 @@
             <a href="#">Contact Us</a>
         </div>
         <!-- 
-            We'll go ahead and create another div with a class
-            of "single-column-layout" AND "intro".
+            We'll go ahead and create another div with TWO
+            classes of "single-column-layout" AND "intro".
 
             You'll see why later.
+
+            (Remember that to add multiple classes to an HTML
+            element, you provide them both to the same class 
+            attribute value and just separate them with spaces.)
          -->
          <div class="single-column-layout intro">
             <!--
@@ -30,8 +34,8 @@
             </div>
             <!--
                 After our img element, let's add another div. 
-                We'll give this div a class of "content-container".
-                We'll put an h1 and a paragraph inside it.
+                We'll give this div a class of "content-container",
+                and we'll put an h1 and a paragraph inside it.
             -->
             <div class="content-container">
                 <h1>Hello, I'm Jim</h1>
